@@ -1,7 +1,7 @@
 Package: cobs
 Version: 1.3-7
 VersionNote: Released 1.3-6 on 2023-12-08
-Date: 2024-02-01
+Date: 2024-02-02
 Title: Constrained B-Splines (Sparse Matrix Based)
 Description: Qualitatively Constrained (Regression) Smoothing Splines via
         Linear Programming and Sparse Matrices.
