@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2020-01-16 r77667) -- "Unsuffered Consequences"
-Copyright (C) 2020 The R Foundation for Statistical Computing
-Platform: x86_64-pc-linux-gnu (64-bit)
+R Under development (unstable) (2024-02-01 r85851) -- "Unsuffered Consequences"
+Copyright (C) 2024 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -29,6 +29,12 @@ Type 'q()' to quit R.
 Loading required package: tools
 > ##--> tryCatch.W.E(), showProc.time(), assertError(), relErrV(), ...
 > 
+> Rsq <- function(obj) {
++     stopifnot(inherits(obj, "cobs"), is.numeric(res <- obj$resid))
++     1 - sum(res^2)/obj$SSy
++ }
+> list_ <- function (...) `names<-`(list(...), vapply(sys.call()[-1L], as.character, ""))
+> is.cobs <- function(x) inherits(x, "cobs")
 > 
 > set.seed(908)
 > x <- seq(-1,2, len = 50)
@@ -249,7 +255,9 @@ qbsks2():
 
  Deleting unnecessary knots ...
 > cp2i <- r2i$value
-> if(doExtras()) print(r2i$warning) # not by default as long as have multi-constr.Rout.save
+> ## IGNORE_RDIFF_BEGIN
+> r2i$warning
+> ## IGNORE_RDIFF_END
 > ## when plotting it, we see that it gave a trivial constant!!
 > cp2c  <- cobs(x,y, constraint = "concave",  pointwise = con, trace = 3)
 qbsks2():
@@ -269,7 +277,8 @@ loo.design2(): ->  Xeq   50 x 7 (nz = 150 =^=  0.43%)
 loo.design2(): ->  Xeq   50 x 3 (nz = 150 =^=     1%) 
                   Xieq    3 x 3 (nz = 9 =^=     1%) 
 > 
-> ## now gives warning (not error):
+> ## now gives warning (not error): but no warning on M1 mac -> IGNORE
+> ## IGNORE_RDIFF_BEGIN
 > cp2IC <- cobs(x,y, constraint = c("inc", "concave"), pointwise = con, trace = 3)
 qbsks2():
  Performing general knot selection ...
@@ -290,7 +299,7 @@ loo.design2(): ->  Xeq   50 x 3 (nz = 150 =^=     1%)
 Warning message:
 In cobs(x, y, constraint = c("inc", "concave"), pointwise = con,  :
   drqssbc2(): Not all flags are normal (== 1), ifl : 18
-> 
+> ## IGNORE_RDIFF_END
 > cp1   <- cobs(x,y, degree = 1,                            pointwise = con, trace = 3)
 qbsks2():
  Performing general knot selection ...
@@ -390,6 +399,56 @@ Warning messages:
 2: In l1.design2(x, w, constraint, ptConstr, knots, pw, nrq = n, nl1,  :
   too few knots ==> nk <= 4; could not add constraint 'concave'
 > 
+> ## Named list of all cobs() results above -- sort() collation order matters for ls() !
+> (curLC <- Sys.getlocale("LC_COLLATE"))
+[1] "C"
+> Sys.setlocale("LC_COLLATE", "C")
+[1] "C"
+> cobsL <- mget(Filter(\(nm) is.cobs(.GlobalEnv[[nm]]), ls(patt="c[12p]")),
++               envir = .GlobalEnv)
+> Sys.setlocale("LC_COLLATE", curLC) # reverting
+[1] "C"
+> 
+> knL <- lapply(cobsL, `[[`, "knots")
+> str(knL[order(lengths(knL))])
+List of 16
+ $ c2IC : num [1:2] -1 2
+ $ cp2IC: num [1:2] -1 2
+ $ cp2c : num [1:2] -1 2
+ $ c1IC : num [1:3] -1 0.776 2
+ $ c1c  : num [1:3] -1 0.776 2
+ $ c2   : num [1:3] -1 -0.449 2
+ $ c2c  : num [1:3] -1 0.163 2
+ $ cp1IC: num [1:3] -1 0.776 2
+ $ cp1c : num [1:3] -1 0.776 2
+ $ c2i  : num [1:4] -1 0.163 0.776 2
+ $ cp2  : num [1:4] -1 -0.449 0.776 2
+ $ cp2i : num [1:4] -1 0.163 0.776 2
+ $ c1   : num [1:5] -1 -0.449 0.163 0.776 2
+ $ c1i  : num [1:5] -1 -0.449 0.163 0.776 2
+ $ cp1  : num [1:5] -1 -0.449 0.163 0.776 2
+ $ cp1i : num [1:5] -1 -0.449 0.163 0.776 2
+> 
+> dput(signif(sapply(cobsL, Rsq), digits=8))
+c(c1 = 0.95079126, c1IC = 0.92974549, c1c = 0.92974549, c1i = 0.95079126, 
+c2 = 0.94637437, c2IC = 0.91375404, c2c = 0.92505977, c2i = 0.95022829, 
+cp1 = 0.9426453, cp1IC = 0.92223149, cp1c = 0.92223149, cp1i = 0.9426453, 
+cp2 = 0.94988863, cp2IC = 0.90051964, cp2c = 0.91375409, cp2i = 0.93611487
+)
+> Rsqrs <- c(c1  = 0.95079126, c1IC = 0.92974549, c1c  = 0.92974549, c1i  = 0.95079126, 
++            c2  = 0.94637437, c2IC = 0.91375404, c2c  = 0.92505977, c2i  = 0.95022829, 
++            cp1 = 0.9426453, cp1IC = 0.92223149, cp1c = 0.92223149, cp1i = 0.9426453, 
++            cp2 = 0.94988863, cp2IC= 0.90051964, cp2c = 0.91375409, cp2i = 0.93611487)
+> 
+> all.equal(Rsqrs, sapply(cobsL, Rsq), tolerance=0) #  2.6277e-9 (Lnx F 38)
+[1] "Mean relative difference: 2.62771e-09"
+> stopifnot(exprs = {
++     all.equal(Rsqrs, sapply(cobsL, Rsq))
++     identical(c(5L, 3L, 3L, 5L,
++                 3L, 2L, 3L, 4L,
++                 5L, 3L, 3L, 5L,
++                 4L, 2L, 2L, 4L), unname(lengths(knL)))
++ })
 > 
 > plot(x,y, main = "cobs(*, degree= 1, constraint = *, pointwise= *)")
 > matlines(x,cbind(fitted(c1),
@@ -421,4 +480,4 @@ Warning messages:
 > 
 > proc.time()
    user  system elapsed 
-  1.448   0.131   1.773 
+  2.342   0.377   2.782 
