@@ -1,6 +1,7 @@
-2024-01-29  Martin Maechler  <maechler@stat.math.ethz.ch>
+2024-02-01  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/scobs.R (cut00): no longer use is.R()
+	* tests/multi-constr.{R,Rout.save}: use some stopifnot()
 	* DESCRIPTION (Version): 1.3-7
 
 2023-10-10  Martin Maechler  <maechler@stat.math.ethz.ch>
